--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,6 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  rabbitmq:
-    image: rabbitmq:3-management
-    container_name: ecommerce-rabbitmq
-    environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: admin
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - ecommerce-network
-
   gateway:
     build:
       context: ./backend
@@ -26,13 +9,9 @@ services:
         APP_NAME: gateway
     container_name: gateway
     environment:
-      RABBITMQ_URL: amqp://admin:admin@rabbitmq:5672
       PORT: 3000
     ports:
       - "3000:3000"
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
     networks:
       - ecommerce-network
     restart: unless-stopped
@@ -45,13 +24,9 @@ services:
         APP_NAME: order-service
     container_name: order-service
     environment:
-      RABBITMQ_URL: amqp://admin:admin@rabbitmq:5672
       PORT: 3001
     ports:
       - "3001:3001"
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
     networks:
       - ecommerce-network
     restart: unless-stopped
@@ -64,13 +39,9 @@ services:
         APP_NAME: inventory-service
     container_name: inventory-service
     environment:
-      RABBITMQ_URL: amqp://admin:admin@rabbitmq:5672
       PORT: 3002
     ports:
       - "3002:3002"
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
     networks:
       - ecommerce-network
     restart: unless-stopped
@@ -83,13 +54,9 @@ services:
         APP_NAME: payment-service
     container_name: payment-service
     environment:
-      RABBITMQ_URL: amqp://admin:admin@rabbitmq:5672
       PORT: 3003
     ports:
       - "3003:3003"
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
     networks:
       - ecommerce-network
     restart: unless-stopped
@@ -102,13 +69,9 @@ services:
         APP_NAME: shipping-service
     container_name: shipping-service
     environment:
-      RABBITMQ_URL: amqp://admin:admin@rabbitmq:5672
       PORT: 3004
     ports:
       - "3004:3004"
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
     networks:
       - ecommerce-network
     restart: unless-stopped
