--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,80 +1,25 @@
 version: "3.8"
 
 services:
-  gateway:
+  user-service:
     build:
-      context: ./backend
+      context: ./user-service
       dockerfile: Dockerfile
-      args:
-        APP_NAME: gateway
-    container_name: gateway
-    environment:
-      PORT: 3000
+    container_name: user-service
     ports:
-      - "3000:3000"
+      - "50051:50051"
     networks:
-      - ecommerce-network
-    restart: unless-stopped
+      - grpc-net
 
-  order-service:
+  product-service:
     build:
-      context: ./backend
+      context: ./product-service
       dockerfile: Dockerfile
-      args:
-        APP_NAME: order-service
-    container_name: order-service
-    environment:
-      PORT: 3001
+    container_name: product-service
     ports:
-      - "3001:3001"
+      - "50052:50052"
     networks:
-      - ecommerce-network
-    restart: unless-stopped
-
-  inventory-service:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-      args:
-        APP_NAME: inventory-service
-    container_name: inventory-service
-    environment:
-      PORT: 3002
-    ports:
-      - "3002:3002"
-    networks:
-      - ecommerce-network
-    restart: unless-stopped
-
-  payment-service:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-      args:
-        APP_NAME: payment-service
-    container_name: payment-service
-    environment:
-      PORT: 3003
-    ports:
-      - "3003:3003"
-    networks:
-      - ecommerce-network
-    restart: unless-stopped
-
-  shipping-service:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-      args:
-        APP_NAME: shipping-service
-    container_name: shipping-service
-    environment:
-      PORT: 3004
-    ports:
-      - "3004:3004"
-    networks:
-      - ecommerce-network
-    restart: unless-stopped
+      - grpc-net
 
   frontend:
     build:
@@ -82,11 +27,16 @@ services:
       dockerfile: Dockerfile
     container_name: frontend
     ports:
-      - "3333:80"
+      - "3000:3000"
+    environment:
+      - USER_SERVICE_URL=user-service:50051
+      - PRODUCT_SERVICE_URL=product-service:50052
     networks:
-      - ecommerce-network
-    restart: unless-stopped
+      - grpc-net
+    depends_on:
+      - user-service
+      - product-service
 
 networks:
-  ecommerce-network:
+  grpc-net:
     driver: bridge
