--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,80 @@
 version: "3.8"
 
 services:
-  user-service:
+  gateway:
     build:
-      context: ./user-service
+      context: ./backend
       dockerfile: Dockerfile
-    container_name: user-service
+      args:
+        APP_NAME: gateway
+    container_name: gateway
+    environment:
+      PORT: 3000
     ports:
-      - "50051:50051"
+      - "3000:3000"
     networks:
-      - grpc-net
+      - ecommerce-network
+    restart: unless-stopped
 
-  product-service:
+  order-service:
     build:
-      context: ./product-service
+      context: ./backend
       dockerfile: Dockerfile
-    container_name: product-service
+      args:
+        APP_NAME: order-service
+    container_name: order-service
+    environment:
+      PORT: 3001
     ports:
-      - "50052:50052"
+      - "3001:3001"
     networks:
-      - grpc-net
+      - ecommerce-network
+    restart: unless-stopped
+
+  inventory-service:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+      args:
+        APP_NAME: inventory-service
+    container_name: inventory-service
+    environment:
+      PORT: 3002
+    ports:
+      - "3002:3002"
+    networks:
+      - ecommerce-network
+    restart: unless-stopped
+
+  payment-service:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+      args:
+        APP_NAME: payment-service
+    container_name: payment-service
+    environment:
+      PORT: 3003
+    ports:
+      - "3003:3003"
+    networks:
+      - ecommerce-network
+    restart: unless-stopped
+
+  shipping-service:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+      args:
+        APP_NAME: shipping-service
+    container_name: shipping-service
+    environment:
+      PORT: 3004
+    ports:
+      - "3004:3004"
+    networks:
+      - ecommerce-network
+    restart: unless-stopped
 
   frontend:
     build:
@@ -27,16 +82,11 @@ services:
       dockerfile: Dockerfile
     container_name: frontend
     ports:
-      - "3000:3000"
-    environment:
-      - USER_SERVICE_URL=user-service:50051
-      - PRODUCT_SERVICE_URL=product-service:50052
+      - "3333:80"
     networks:
-      - grpc-net
-    depends_on:
-      - user-service
-      - product-service
+      - ecommerce-network
+    restart: unless-stopped
 
 networks:
-  grpc-net:
+  ecommerce-network:
     driver: bridge
